--- a/Hrishikesh_Projects/My_portfolio.html
+++ b/Hrishikesh_Projects/My_portfolio.html
@@ -536,7 +536,7 @@
             </figure>
        </div>
        <div id="picdiv">
-        <img src="/imagesforPort/codingimg.jpeg" alt="codeimg">
+        <img src="imagesforPort/codingimg.jpeg" alt="codeimg">
        </div>
        </div>
 
@@ -544,7 +544,7 @@
     <section id="about">
         <div class="aboutinfodiv">
             <figure>
-            <img src="/imagesforPort/mypic.png" alt="Myimg">
+            <img src="imagesforPort/mypic.png" alt="Myimg">
         </figure>
         <article>
             <p>
@@ -562,7 +562,7 @@
            <div class="card">
              <div class="prjdiv">
             <figure>
-                <img src="/imagesforPort/project1valorant.jpg" alt="valorant">
+                <img src="imagesforPort/project1valorant.jpg" alt="valorant">
             </figure>
             <article>
                 <h2>VALORANT CARDS.</h2>
@@ -572,42 +572,42 @@
 
         <div class="prjdiv">
             <figure>
-                <img src="/bookingImages/bookinglogo.jpeg" alt="Booking">
+                <img src="bookingImages/bookinglogo.jpeg" alt="Booking">
             </figure>
             <article>
                 <h2>BOOKING SYSTEM.</h2>
-                <a href="/Booking.html" target="_blank">Open Project Two</a>
+                <a href="Booking.html" target="_blank">Open Project Two</a>
             </article>
         </div>
 
         <div class="prjdiv">
             <figure>
-                <img src="/shoppingImages/shoppinglogo.jpeg" alt="Shopping">
+                <img src="shoppingImages/shoppinglogo.jpeg" alt="Shopping">
             </figure>
             <article>
                 <h2>E-SHOP.</h2>
-                <a href="/shopping.html" target="_blank">Open Project Three</a>
+                <a href="shopping.html" target="_blank">Open Project Three</a>
             </article>
         </div>
 
 
         <div class="prjdiv">
             <figure>
-                <img src="/calculatorImages/calculator.jpg" alt="Calculator">
+                <img src="calculatorImages/calculator.jpg" alt="Calculator">
             </figure>
             <article>
                 <h2>Calculator</h2>
-                <a href="/My_Calculator.html" target="_blank">Open Project Four</a>
+                <a href="My_Calculator.html" target="_blank">Open Project Four</a>
             </article>
         </div>
 
         <div class="prjdiv">
             <figure>
-                <img src="/stopwatchImages/stopwatch.jpg" alt="StopWatch">
+                <img src="stopwatchImages/stopwatch.jpg" alt="StopWatch">
             </figure>
             <article>
                 <h2>StopWatch</h2>
-                <a href="/My_Stopwatch.html" target="_blank">Open Project Five</a>
+                <a href="My_Stopwatch.html" target="_blank">Open Project Five</a>
             </article>
         </div>
            </div>
