--- a/Hrishikesh_Projects/My_portfolio.html
+++ b/Hrishikesh_Projects/My_portfolio.html
@@ -566,7 +566,7 @@
             </figure>
             <article>
                 <h2>VALORANT CARDS.</h2>
-                <a href="valorant.html" target="_blank">Open Project One</a>
+                <a href="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/valorant.html" target="_blank">Open Project One</a>
             </article>
         </div>
 
@@ -576,7 +576,7 @@
             </figure>
             <article>
                 <h2>BOOKING SYSTEM.</h2>
-                <a href="Booking.html" target="_blank">Open Project Two</a>
+                <a href="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/Booking.html" target="_blank">Open Project Two</a>
             </article>
         </div>
 
@@ -586,7 +586,7 @@
             </figure>
             <article>
                 <h2>E-SHOP.</h2>
-                <a href="shopping.html" target="_blank">Open Project Three</a>
+                <a href="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/shopping.html" target="_blank">Open Project Three</a>
             </article>
         </div>
 
@@ -597,7 +597,7 @@
             </figure>
             <article>
                 <h2>Calculator</h2>
-                <a href="My_Calculator.html" target="_blank">Open Project Four</a>
+                <a href="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/My_Calculator.html" target="_blank">Open Project Four</a>
             </article>
         </div>
 
@@ -607,7 +607,7 @@
             </figure>
             <article>
                 <h2>StopWatch</h2>
-                <a href="My_Stopwatch.html" target="_blank">Open Project Five</a>
+                <a href="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/My_Stopwatch.html" target="_blank">Open Project Five</a>
             </article>
         </div>
            </div>
