--- a/Hrishikesh_Projects/Booking.html
+++ b/Hrishikesh_Projects/Booking.html
@@ -117,7 +117,7 @@
         <div class="cards">
             <div class="card">
                 <figure>
-                    <img src="/bookingImages/resort.jpeg" alt="resort">
+                    <img src="bookingImages/resort.jpeg" alt="resort">
                 </figure>
                 <article>
                     <h3>Bella Vista Resort</h3>
@@ -129,7 +129,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="/bookingImages/palace1.jpeg" alt="palace">
+                    <img src="bookingImages/palace1.jpeg" alt="palace">
                 </figure>
                 <article>
                     <h3>Island Palace hotel</h3>
@@ -141,7 +141,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="/bookingImages/hotel.webp" alt="hotel">
+                    <img src="bookingImages/hotel.webp" alt="hotel">
                 </figure>
                 <article>
                     <h3>White Sea Hotel</h3>
@@ -153,7 +153,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="/bookingImages/hotel2.jpeg" alt="hotel">
+                    <img src="bookingImages/hotel2.jpeg" alt="hotel">
                 </figure>
                 <article>
                     <h3>LuxEco</h3>
@@ -165,7 +165,7 @@
 
             <div class="card">
                 <figure>
-                    <img src="/bookingImages/hotel3.jpeg" alt="hotel">
+                    <img src="bookingImages/hotel3.jpeg" alt="hotel">
                 </figure>
                 <article>
                     <h3>Cerenity Clove Hotel</h3>
