--- a/Hrishikesh_Projects/valorant.html
+++ b/Hrishikesh_Projects/valorant.html
@@ -191,7 +191,7 @@
 </head>
 <body>
     <header>
-        <img src="valorantImages/riotgames.png" alt="logo">
+        <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/valorantImages/riotgames.png" alt="logo">
         <nav>
             <a href="https://playvalorant.com/en-us/" target="_blank"><li>GAME INFO</li></a>
             <a href="https://playvalorant.com/en-us/media/" target="_blank"><li>MEDIA</li></a>
@@ -208,7 +208,7 @@
                 <div class="card">
                    <figure>
                     <a href="https://playvalorant.com/en-us/agents/jett/" target="_blank">
-                        <img src="valorantImages/jett.jpg" alt="jett">
+                        <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/jett.jpg" alt="jett">
                     </a>
                     
                    </figure>
@@ -231,7 +231,7 @@
                 <div class="card">
                     <figure>
                         <a href="https://playvalorant.com/en-us/agents/reyna/" target="_blank">
-                            <img src="valorantImages/reyna.jpg" alt="reyna">
+                            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/reyna.jpg" alt="reyna">
                         </a>
                     </figure>
                      <article>
@@ -253,7 +253,7 @@
                  <div class="card">
                     <figure>
                         <a href="https://playvalorant.com/en-us/agents/phoenix/" target="_blank">
-                            <img src="valorantImages/pheonix.jpg" alt="pheonix">
+                            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/pheonix.jpg" alt="pheonix">
                         </a>
                     </figure>
                     <article>
@@ -279,7 +279,7 @@
                 <div class="card">
                     <figure>
                         <a href="https://playvalorant.com/en-us/agents/neon/" target="_blank">
-                            <img src="valorantImages/neon.jpg" alt="neon">
+                            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/neon.jpg" alt="neon">
                         </a>
                     </figure>
                      <article>
@@ -301,7 +301,7 @@
                  <div class="card">
                     <figure>
                         <a href="https://playvalorant.com/en-us/agents/raze/" target="_blank">
-                            <img src="valorantImages/raze.jpg" alt="raze">
+                            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/raze.jpg" alt="raze">
                         </a>
                     </figure>
                      <article>
@@ -323,7 +323,7 @@
                  <div class="card">
                     <figure>
                         <a href="https://playvalorant.com/en-us/agents/yoru/" target="_blank">
-                            <img src="valorantImages/yoru.jpg" alt="yoru">
+                            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/yoru.jpg" alt="yoru">
                         </a>
                     </figure>
                      <article>
@@ -351,7 +351,7 @@
                 <div class="card">
                     <figure>
                         <a href="https://playvalorant.com/en-us/agents/omen/" target="_blank">
-                            <img src="valorantImages/omen.jpg" alt="omen">
+                            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/omen.jpg" alt="omen">
 
                         </a>
                     </figure>
@@ -374,7 +374,7 @@
                  <div class="card">
                     <figure>
                         <a href="https://playvalorant.com/en-us/agents/chamber/" target="_blank">
-                            <img src="valorantImages/chamber.jpg" alt="chamber">
+                            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/chamber.jpg" alt="chamber">
 
                         </a>
                     </figure>
@@ -397,7 +397,7 @@
                  <div class="card">
                     <figure>
                         <a href="https://playvalorant.com/en-us/agents/gekko/" target="_blank">
-                            <img src="valorantImages/gekko.jpg" alt="gekko">
+                            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_ProjectsvalorantImages/gekko.jpg" alt="gekko">
                         </a>
                     </figure>
                      <article>
