--- a/Hrishikesh_Projects/shopping.html
+++ b/Hrishikesh_Projects/shopping.html
@@ -106,7 +106,7 @@
     <section>
         <header>
            <nav class="nav-bar">
-            <img src="/shoppingImages/basket.png" alt="logo" id="logo">
+            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/shoppingImages/basket.png" alt="logo" id="logo">
                 <a href="#"> Home</a>
                 <a href="#"> Listing</a>
                 <a href="#"> Inventory</a>
@@ -119,42 +119,42 @@
            
            <a href="https://www.flipkart.com" target="_blank">
             <h2>Pyjamas</h2>
-            <img src="shoppingImages/pyjama.jpeg" alt="pyjama" class="img">
+            <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/shoppingImages/pyjama.jpeg" alt="pyjama" class="img">
            </a>
             
         </div>
         <div class="div">
             <a href="https://www.flipkart.com" target="_blank">
                 <h2>Shorts</h2>
-                <img src="shoppingImages/shorts.jpeg" alt="shorts" class="img">
+                <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/shoppingImages/shorts.jpeg" alt="shorts" class="img">
 
             </a>
         </div>
         <div class="div">
             <a href="https://www.flipkart.com" target="_blank">
                 <h2>Dress</h2>
-                <img src="shoppingImages/dress.jpeg" alt="dress" class="">
+                <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/shoppingImages/dress.jpeg" alt="dress" class="">
 
             </a>
         </div>
         <div class="div">
             <a href="https://www.flipkart.com" target="_blank">
                 <h2>SweatShirts</h2>
-                <img src="shoppingImages/sweatshirt.jpeg" alt="SweatShirts" id="img">
+                <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/shoppingImages/sweatshirt.jpeg" alt="SweatShirts" id="img">
 
             </a>
         </div>
         <div class="div">
             <a href="https://www.flipkart.com" target="_blank">
                 <h2>SweatShirts</h2>
-                <img src="shoppingImages/jeans2.jpeg" alt="jeans" id="img">
+                <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/shoppingImages/jeans2.jpeg" alt="jeans" id="img">
 
             </a>
         </div>
         <div class="div">
             <a href="https://www.flipkart.com" target="_blank">
                 <h2>Jackets</h2>
-                <img src="shoppingImages/jackets.jpeg" alt="jackets" id="img">
+                <img src="https://hrishikeshad123.github.io/Projects/Hrishikesh_Projects/shoppingImages/jackets.jpeg" alt="jackets" id="img">
 
             </a>
 
