--- a/Hrishikesh_Projects/My_portfolio.html
+++ b/Hrishikesh_Projects/My_portfolio.html
@@ -641,7 +641,7 @@
             <label>Email</label>
             <input type="email" name="email" placeholder="example@gmail.com" required autocomplete="on">
             <label>Phone (optional)</label>
-            <input type="tel" placeholder="xxx-xxx-xxxx" pattern="[0-9{10}]" maxlength="10">
+            <input type="tel" placeholder="xxx-xxx-xxxx" name="text" pattern="[0-9{10}]" maxlength="10">
             <label>Message</label>
             <textarea placeholder="Type Your Message" name="text" cols="35"></textarea>
             <input type="submit" value="submit" id="submitbtn">
